--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Check out the code from the repo
       - name: Checkout Code
         uses: actions/checkout@v3
 
@@ -22,11 +21,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # 4. Build and Push the SERVER Image
       - name: Build and push Server
         uses: docker/build-push-action@v4
         with:
-          context: ./server  folder
+          context: ./server
           file: ./server/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/uptime-monitor-server:latest
